--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -20,10 +20,74 @@ body {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  display: flex;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+/* changes */
+/* * {
+  border: 1px solid red;
+} */
+
+.sidebar {
+  flex-shrink: 0;
+  padding: 16px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  font-size: 24px;
+  
+}
+
+li {
+  list-style-type: none;
+  padding-top: 16px;
+}
+
+ul {
+  padding: 8px;
+}
+
+.middlesection {
+  display: flex;
+  flex: 1;
+}
+
+.cardsection {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 48px;
+  gap: 32px;
+}
+
+.card {
+  width: 200px;
+  padding: 16px;
+}
+
+.header {
+  display: flex;
+  font-size: 32px;
+  align-items: center;
+  padding-left: 16px;
+  font-weight: 900;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
 }
